--- a/final_report_notebook.ipynb
+++ b/final_report_notebook.ipynb
@@ -14,7 +14,7 @@
     "I know, kinda scary. But we thought, where around Pittsburgh would be the most feasible for this feat? And so: our beautiful and terrifying project was born.\n",
     "\n",
     "### **Metrics**\n",
-    "We have a total of *four* metrics. For our first metric is the amount of **Particulate Matter**\n",
+    "We have a total of *four* metrics. For our first metric is the amount of **Particulate Matter**. Our second metric is the locations of **bridges**\n",
     "\n",
     "### **The Best Neighborhood**\n",
     "Based on our metrics, we\n"
