--- a/final_report_notebook-Copy1.ipynb
+++ b/final_report_notebook-Copy1.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "1. For our first metric, we have the amount of **Particulate Matter** in the air. Particualte matter is defined by the EPA as \"a mixture of solid particles and liquid droplets found in the air\" (\"Particulate Matter (PM) Basics\"). These air particles are able to become radiated, so this leads into how the metric relates to our topic. After the bomb explodes, in the fallout with radiation in the air, you want to be somewhere without floating particles of radiation that can get into your lungs! By using the *Allegheny County Particulate Matter 2.5* dataset from WPRDC, which measures the amount of PM (particulate matter) that is in the air at a certain time, we found that the further you move away from Pittsburgh the less PM you will find. This is depicted on the heatmap shown below.\n",
     "\n",
-    "2. Our second metric is the location of **bridges**. In a nuclear fallout, you need to be able keep moving place to place, so that you can get as far from the radiation as possible. By mapping every bridge in Pittsburgh, you are able to plot out the best route out of the city."
+    "2. Our second metric is the location of **bridges**. In a nuclear fallout, you need to be able keep moving place to place, so that you can get as far from the radiation as possible. By mapping every bridge in Pittsburgh, you are able to plot out the best route out of the city. The neighborhoods with the most amount of bridges will have the least congestion in the advent of nuclear armaggedon. If you are living in a fallout-esque world, the underpases of bridges are ideal for shelter, and the overpasses are ideal for warding off mutant ghouls."
    ]
   },
   {
