--- a/final_report_notebook-Copy1.ipynb
+++ b/final_report_notebook-Copy1.ipynb
@@ -536,7 +536,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n"
+    "### Ed's Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'pittsburghfoodfacilties.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4c3b10a945f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mchip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pittsburghfoodfacilties.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    678\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    679\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 680\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    681\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    573\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    574\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 575\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    576\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    577\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    931\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    932\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 933\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    934\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    935\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1215\u001b[0m             \u001b[0;31m# \"Union[str, PathLike[str], ReadCsvBuffer[bytes], ReadCsvBuffer[str]]\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1216\u001b[0m             \u001b[0;31m# , \"str\", \"bool\", \"Any\", \"Any\", \"Any\", \"Any\", \"Any\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1217\u001b[0;31m             self.handles = get_handle(  # type: ignore[call-overload]\n\u001b[0m\u001b[1;32m   1218\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1219\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/tljh/user/lib/python3.8/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    787\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 789\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    790\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    791\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pittsburghfoodfacilties.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "chip = pd.read_csv(\"pittsburghfoodfacilties.csv\")\n",
+    "\n",
+    "\n",
+    "new_dict = { }\n",
+    "burghzips = [15212.0, 15201.0, 15233.0, 15210.0, 15220.0, 15216.0, 15219.0, 15213.0, 15224.0, 15226.0, 15227.0, 15222.0, 15232.0, 15217.0, 15211.0, 15206.0]\n",
+    "\n",
+    "dict2= {\n",
+    "       \"Allegheny Center\":0, \"Allegheny West\":0, \"Allentown\":0, \"Bankston\":0\n",
+    "        }\n",
+    "\n",
+    "for index,row in chip.iterrows():\n",
+    "    new_key = row['zip']\n",
+    "    if(new_key not in burghzips):\n",
+    "        continue\n",
+    "    else:\n",
+    "        \n",
+    "        if new_key in new_dict:\n",
+    "            new_dict[new_key] =  new_dict[new_key] + 1\n",
+    "        else:\n",
+    "            new_dict[new_key] = 1\n",
+    "\n",
+    "            \n",
+    "count = 0;\n",
+    "for zips in new_dict:\n",
+    "    if(zips== 15216):\n",
+    "        dict2[\"Dormont\"]= new_dict[15216]\n",
+    "        dict2[\"Beechview\"]= new_dict[15216]\n",
+    "    if(zips== 15212):\n",
+    "        dict2[\"Allegheny Center\"]= new_dict[15212]\n",
+    "        dict2[\"Allegheny West\"]= new_dict[15212]\n",
+    "        dict2[\"Central Northside\"]= new_dict[15212]\n",
+    "    if(zips== 15210):\n",
+    "        dict2[\"Allentown\"]= new_dict[15210]\n",
+    "        dict2[\"Arlington\"] =new_dict[15210]\n",
+    "        dict2[\"Arlington Heights\"] =new_dict[15210]\n",
+    "        dict2[\"St Clair\"] = new_dict[15210]\n",
+    "    if(zips== 15220):\n",
+    "        dict2[\"Bankston\"] = new_dict[15220]\n",
+    "        dict2[\"Bankston\"] = new_dict[15220]\n",
+    "    if(zips== 15219):\n",
+    "        dict2[\"Hill District\"] = new_dict[15219]\n",
+    "        dict2[\"Uptown\"]= new_dict[15219]\n",
+    "    if(zips== 15222):\n",
+    "        dict2[\"Downtown\"]= new_dict[15222]\n",
+    "        dict2[\"Strip District\"] = new_dict[15222]\n",
+    "    if(zips== 15201):\n",
+    "        dict2[\"Stanton Heights\"]= new_dict[15201]\n",
+    "        dict2[\"Lawrenceville\"]= new_dict[15201] \n",
+    "    if(zips== 15211):\n",
+    "        dict2[\"Duquesne Heights\"]= new_dict[15211] \n",
+    "        dict2[\"Mount Washington\"]= new_dict[15211] \n",
+    "    if(zips== 15232):\n",
+    "        dict2[\"ShadySide\"]= new_dict[15232] \n",
+    "    if(zips== 15217):\n",
+    "        dict2[\"SquirrelHill\"]= new_dict[15217]\n",
+    "    if(zips== 15213):\n",
+    "        dict2[\"North Oakland\"]= new_dict[15213]\n",
+    "        dict2[\"West Oakland\"]= new_dict[15213]\n",
+    "        dict2[\"Oakland History District\"]= new_dict[15213]\n",
+    "    if(zips== 15224):\n",
+    "        dict2[\"Bloomfield\"]= new_dict[15224]\n",
+    "        dict2[\"Garfield\"]= new_dict[15224]\n",
+    "    if(zips== 15206):\n",
+    "        dict2[\"Highland Park\"]= new_dict[15206]\n",
+    "    if(zips== 15233):\n",
+    "        dict2[\"Chateau\"]= new_dict[15233]\n",
+    "        dict2[\"Manchester\"]= new_dict[15233]\n",
+    "    if(zips== 15226):\n",
+    "        dict2[\"Brookline\"]= new_dict[15226]\n",
+    "        dict2[\"West Liberty\"]= new_dict[15226]\n",
+    "    if(zips== 15227):\n",
+    "        dict2[\"Brentwood\"]= new_dict[15227]\n",
+    "            \n",
+    "\n",
+    "zips = list(dict2.keys())\n",
+    "values = list(dict2.values())\n",
+    "fig = plt.figure(figsize= (40,20))\n",
+    "\n",
+    "plt.bar(zips, values, color= 'blue', width = 0.2)\n",
+    "\n",
+    "plt.xlabel(\"zips\")\n",
+    "plt.ylabel(\"restaurants\")\n",
+    "plt.title(\"restaurants in neighborhoods\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Group Conclusion*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Individual Conclusions*"
    ]
   },
   {
@@ -544,8 +673,26 @@
    "metadata": {},
    "source": [
     "**Michael**:\n",
-    "* The amount of neighborhoods that I have been too are very limited, so I am unable to give an accurate description of what other neihborhoods around Pittsburgh are like."
+    "* The amount of neighborhoods that I have been too are very limited, so I am unable to give an accurate description of what other neihborhoods around Pittsburgh are like. However, I would think that any neighborhood thats closest to the center of the Pittsburgh map would be the worst according to PM 2.5 data, because that is where all the big buildings are. However, my data proves that that is not the case, showing that the further South you go, the more PM 2.5 there is. I believe this is must be because of the wind carrying the Particles Southward.\n",
+    "\n",
+    "**Kieran**\n",
+    "* According to my data, Downtown and Squirrel Hill South contain the most amount of bridges and would be ideal should there every be a nuclear strike on Pittsburgh. Personally, I was a little saddened to see that South Oakland didn't make the list, as it is my personal favorite neighborhood. However, this is to be expected as South Oakland does not border one of the rivers. Downtown is the overall top contender, as it has the most amount of resources, most amount of bridges, and relatively low levels of particulate matter. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ed**\n",
+    "* It is clear that Downtown, Strip District, and close surroundings have the most restaurants. This is followed by Allegheny Center/West and Central Northside which both tied at second most food facilities. As such, it is most likely to survive a nuclear fallout in either the Downtown region, or in the Northside/Allegheny Center/West."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
