--- a/final_report_notebook-Copy1.ipynb
+++ b/final_report_notebook-Copy1.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "2. Our second metric is the location of **bridges**. In a nuclear fallout, you need to be able keep moving place to place, so that you can get as far from the radiation as possible. By mapping every bridge in Pittsburgh, you are able to plot out the best route out of the city.\n",
     "\n",
-    "3. The third metric is the frequency of **restaurants** located in Pittsburgh. This is because they will not only provide shelter from the harmful elements outside, however they will also be able to find some stores of food. The dataset I'm using is a list of restaurants and the zip codes they are located in around Pittsburgh.\n",
+    "3. The third metric is the frequency of **restaurants** located in Pittsburgh. This is because they will not only provide shelter from the harmful elements outside, but also store foods. The dataset I'm using is a list of restaurants and the zip codes they are located in around Allegheny County, which I sort through.\n",
     "\n",
     "4. The final metric is the number of **supermarkets** located within the towns of Pittsburgh. The dataset I'm using is the location of all the supermarkets recorded in Pittsburgh and the towns in which they reside in."
    ]
