add group conclusion

--- a/final_report_notebook-Copy1.ipynb
+++ b/final_report_notebook-Copy1.ipynb
@@ -657,7 +657,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *Group Conclusion*\n"
+    "## *Group Conclusion*\n",
+    "As a group, we decided that the best neighborhood to survive a nuclear blast in (based on our data) is Allegeny Center. They are not only tied for second for most amount of restaurants, meaning more possible food, but also they are on the Northern side of Pittsburgh, which, as we explained earlier, means that there will be less harmful, radioactive particles on average. Also, as shown on the bridge point map, there are several bridges posted around the neighborhood, which means that in the case that one should collapse, there would be other options for movement around and out of the Pittsburgh area."
    ]
   },
   {
