--- a/final_report_notebook-Copy1.ipynb
+++ b/final_report_notebook-Copy1.ipynb
@@ -683,7 +683,7 @@
    "metadata": {},
    "source": [
     "**Ed**\n",
-    "* It is clear that Downtown, Strip District, and close surroundings have the most restaurants. This is followed by Allegheny Center/West and Central Northside which both tied at second most food facilities. As such, it is most likely to survive a nuclear fallout in either the Downtown region, or in the Northside/Allegheny Center/West. These places tend to be highly populated so there could be conflict with other scavengers. Thus, you need at least 10 charism and a lot of stimpack. Halal guys and mcdonald is worth pillaging over.👨🏿‍🦽"
+    "* It is clear that Downtown, Strip District, and close surroundings have the most restaurants. This is followed by Allegheny Center/West and Central Northside which both tied at second most food facilities. As such, it is most likely to survive a nuclear fallout in either the Downtown region, or in the Northside/Allegheny Center/West. These places tend to be highly populated so there could be conflict with other scavengers, radscorpion, and mutants. Thus, you need at least 10 charism and a lot of stimpack. Halal guys and mcdonald is worth pillaging over.👨🏿‍🦽"
    ]
   },
   {
